tree-sitter-quadrate/test/corpus/control_flow.txt
================================================================================
If statement
================================================================================

fn test( -- ) {
    1 1 eq
    if {
        10
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (builtin_operation)
      (if_expression
        then: (block
          (number))))))

================================================================================
If-else statement
================================================================================

fn test( -- ) {
    1 2 eq
    if {
        10
    } else {
        20
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (builtin_operation)
      (if_expression
        then: (block
          (number))
        else: (block
          (number))))))

================================================================================
For loop with variable
================================================================================

fn test( -- ) {
    0 10 1 for i {
        i print
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (number)
      (for_loop
        variable: (identifier)
        body: (block
          (identifier)
          (builtin_operation))))))

================================================================================
Infinite loop statement
================================================================================

fn test( -- ) {
    0
    loop {
        dup 10 lt if {
            dup print
            1 add
        } else {
            break
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (loop_statement
        body: (block
          (builtin_operation)
          (number)
          (builtin_operation)
          (if_expression
            then: (block
              (builtin_operation)
              (builtin_operation)
              (number)
              (builtin_operation))
            else: (block
              (break_statement))))))))

================================================================================
Switch statement
================================================================================

fn test( -- ) {
    1 switch {
        1 {
            100
        }
        2 {
            200
        }
        _ {
            -1
        }
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (switch_expression
        (case_clause
          value: (number)
          body: (block
            (number)))
        (case_clause
          value: (number)
          body: (block
            (number)))
        (default_clause
          body: (block
            (number)))))))

================================================================================
Break and continue
================================================================================

fn test( -- ) {
    0 10 1 for i {
        i 5 eq if {
            break
        }
        continue
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (number)
      (for_loop
        variable: (identifier)
        body: (block
          (identifier)
          (number)
          (builtin_operation)
          (if_expression
            then: (block
              (break_statement)))
          (continue_statement))))))

================================================================================
Defer block
================================================================================

fn test( -- ) {
    defer {
        2 3 add
    }
    4 5 add
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (defer_block
        body: (block
          (number)
          (number)
          (builtin_operation)))
      (number)
      (number)
      (builtin_operation))))

================================================================================
Return statement
================================================================================

fn test( -- ) {
    defer {
        "cleanup" prints
    }
    "done" prints
    return
    "never reached" prints
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (defer_block
        body: (block
          (string)
          (builtin_operation)))
      (string)
      (builtin_operation)
      (return_statement)
      (string)
      (builtin_operation))))
