tree-sitter-quadrate/test/corpus/new_features.txt
================================================================================
Type casting operations
================================================================================

fn test( -- ) {
    42 cast<f64>
    3.14 cast<i64>
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (generic_instruction
        type_arg: (identifier))
      (number)
      (generic_instruction
        type_arg: (identifier)))))

================================================================================
Array and logic operations
================================================================================

fn test( -- ) {
    3 makep -> a
    a 0 nth
    a len
    a 7 append
    0 lnot
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (builtin_operation)
      (local_declaration
        name: (identifier))
      (identifier)
      (number)
      (builtin_operation)
      (identifier)
      (builtin_operation)
      (identifier)
      (number)
      (builtin_operation)
      (number)
      (builtin_operation))))

================================================================================
Bitwise operations
================================================================================

fn test( -- ) {
    8 2 shl
    32 2 shr
    5 3 xor
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (builtin_operation)
      (number)
      (number)
      (builtin_operation)
      (number)
      (number)
      (builtin_operation))))

================================================================================
Pointer operations
================================================================================

fn test( -- ) {
    100 -> ptr
    ptr @i
    200 ptr !i
    ptr @p
    ptr @f
    42 ptr !f
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (local_declaration
        name: (identifier))
      (identifier)
      (pointer_operation)
      (number)
      (identifier)
      (pointer_operation)
      (identifier)
      (pointer_operation)
      (identifier)
      (pointer_operation)
      (number)
      (identifier)
      (pointer_operation))))

================================================================================
Operator symbols
================================================================================

fn test( -- ) {
    1 2 +
    5 3 -
    4 2 *
    10 2 /
    10 3 %
    42 print
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol)
      (number)
      (builtin_operation))))

================================================================================
Comparison operator symbols
================================================================================

fn test( -- ) {
    1 2 <
    1 2 >
    1 2 <=
    1 2 >=
    1 2 ==
    1 2 !=
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol)
      (number)
      (number)
      (operator_symbol))))

================================================================================
Threading operations
================================================================================

fn test( -- ) {
    spawn
    detach
    wait
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (builtin_operation)
      (builtin_operation)
      (builtin_operation))))

================================================================================
Error handling
================================================================================

fn test( -- ) {
    "Error message" 1 panic
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (string)
      (number)
      (builtin_operation))))

================================================================================
New I/O operations
================================================================================

fn test( -- ) {
    nl
    read
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    signature: (stack_signature)
    body: (block
      (builtin_operation)
      (builtin_operation))))
